# codeograph

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  commit_msg.txt  config.yaml  conftest.py  pyproject.toml  temp_pr_body.md
.github/ISSUE_TEMPLATE/: secret-leak-incident.md
.github/workflows/: ci.yml  nightly.yml  secrets-scan.yml
_generated/: manifest.schema.json
codeograph/: __init__.py  __main__.py  logging_config.py  logging_filters.py  logging_formatters.py
codeograph/analyzer/: __init__.py  corpus_analyzer.py  llm_corpus_enricher.py
codeograph/cli/: cache.py  eval.py  eval_report.py  main.py  mutually_exclusive_option.py  output_directory.py  render.py  render_pipeline.py
codeograph/config/: settings.py  yaml_source.py
codeograph/evals/: corpus_evaluator.py  models.py  path_display.py  report.py  runner.py  scorecard.schema.json  scorecard_schema.py
codeograph/graph/: graph_assembler.py  graph_builder.py  graph_writer.py
codeograph/graph/models/: __init__.py  graph_schema.py  llm_annotations_schema.py  manifest_schema.py
codeograph/input/: acquisition.py  discovery.py  input_acquirer.py  models.py  source_discoverer.py
codeograph/input/acquirers/: base_acquirer.py  git_acquirer.py  local_acquirer.py  zip_acquirer.py
codeograph/llm/: __init__.py  _prompts_generated.py  confirmation_gate.py  cost_estimator.py  errors.py  factory.py  models.py  pre_flight_cost_gate.py  pre_flight_estimator.py  price_loader.py  prices.toml  provider.py  resolver.py  types.py
codeograph/llm/cache/: base.py  cache_entry.py  cache_stats.py  key.py  sqlite_backend.py
codeograph/llm/middleware/: caching_llm_provider.py  ceiling_llm_provider.py  ceiling_provider.py  retry_policy.py  retrying_llm_provider.py  telemetry_llm_provider.py
codeograph/llm/prompts/: __init__.py  loader.py  models.py  renderer.py  validation.py
codeograph/llm/providers/: anthropic_provider.py  langchain_base.py  openai_compatible_provider.py  openrouter_provider.py
codeograph/manifest/: __init__.py  artefact.py  assembler.py  io.py  models.py  run_id.py  schema.py  schema_cli.py
codeograph/parser/: __init__.py  file_parser_dispatcher.py  java_file_parser.py  models.py  regex_fallback.py
codeograph/parser/java/: pom.xml
codeograph/passes/pass1/: annotator.py  models.py  node_annotator.py  node_source_loader.py  schemas.py
codeograph/passes/pass2/: corpus_synthesizer.py  models.py  schemas.py  synthesizer.py
codeograph/prompts/annotate_node/: v1.md
codeograph/prompts/synthesize_corpus/: v1.md
codeograph/renderers/: __init__.py  base.py  models.py  renderer_registry.py
codeograph/renderers/typescript_nestjs/: __init__.py  config.py  feature_policies.py  helpers.py  models.py  renderer.py  scaffold_emitter.py  typescript_config.py  typescript_renderer.py
codeograph/rendering/: __init__.py  base.py  class_selector.py  domain_grouping.py  manual_mapping_grouping.py  models.py  package_prefix_grouping.py
codeograph/schema/: graph.schema.json  llm-annotations.schema.json  manifest.schema.json
codeograph/scripts/: verify_gitleaks_pin.py
codeograph/telemetry/: attempt.py  base.py  emitter.py  jsonl_emitter.py  session.py  session_manager.py  stats_aggregator.py  telemetry_record.py  telemetry_report_aggregator.py
docs/: architecture.md  manifest-versions.md  model-selection-and-cost.md  prior-art.md  running-codeograph.md
docs/adr/: ADR-001-project-skeleton.md  ADR-002-input-agnostic-design.md  ADR-003-parsing-strategy.md  ADR-004-complexity-model.md  ADR-005-token-utilization.md  ADR-006-knowledge-graph-schema.md  ADR-007-golden-graph-pattern.md  ADR-008-pluggable-renderer-interface.md  ADR-009-rendering-budget-cap.md  ADR-010-spring-to-typescript-nestjs-mapping.md  ADR-013-llm-provider-abstraction.md  ADR-014-prompt-versioning.md  ADR-015-telemetry-and-response-cache.md  ADR-017-evaluation-framework.md  ADR-018-test-strategy-with-pytest.md  ADR-022-run-manifest-and-structured-logging.md  ADR-023-secret-scanning-with-gitleaks.md  ADR-025-manifest-schema-flat-layout.md  ADR-026-release-version-management.md  ADR-027-temporary-cost-safety-floor.md  README.md
examples/spring-blog-api/: graph-scorecard.json  pom.xml
examples/spring-rest-sample/: graph-scorecard.json  pom.xml
llm/: __init__.py  _prompts_generated.py  provider.py  types.py
llm/cache/: base.py  key.py
llm/middleware/: retry_policy.py  retrying_llm_provider.py  telemetry_llm_provider.py
llm/prompts/: loader.py  models.py
prompts/annotate_node/: v1.md
prompts/synthesize_corpus/: v1.md
scripts/: gen_prompt_constants.py  gen_scorecard_schema.py  update_prompt_hash_pins.py
telemetry/: attempt.py  base.py
tests/: conftest.py  test_environment.py  test_golden.py  test_smoke.py
tests/analyzer/: test_corpus_analyzer.py
tests/cli/: test_cache.py  test_render_force.py
tests/fixtures/codeograph-corpus/: pom.xml
tests/fixtures/llm/: __init__.py  mock_provider.py
tests/golden/codeograph-corpus/: graph.json
tests/graph/: test_graph_assembler.py  test_graph_builder.py  test_graph_writer.py
tests/helpers/: __init__.py  determinism.py
tests/integration/: test_cli_cost_safety.py  test_examples_smoke.py  test_goldens.py  test_render_pipeline.py
tests/llm/: test_cache_sqlite.py  test_middleware_caching.py  test_middleware_retry.py  test_middleware_telemetry.py  test_provider_mock.py  test_telemetry_jsonl.py
tests/parser/: test_file_parser_dispatcher.py  test_java_file_parser.py  test_regex_fallback.py
tests/passes/: test_annotator.py  test_synthesizer.py
tests/renderers/: test_typescript_config.py  test_typescript_renderer.py
tests/rendering/: test_class_selector.py  test_domain_grouping.py
tests/unit/: test_environment.py  test_helpers.py  test_settings.py  test_version.py  test_yaml_source.py
tests/unit/analyzer/: test_corpus_analyzer.py  test_llm_corpus_enricher.py
tests/unit/cli/: test_cli_settings.py  test_render_force.py  test_run_eval.py
(+125 files in other folders)
