[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeograph"
version = "0.1.0"
description = "Ingest a Java/Spring Boot codebase; emit a knowledge graph and a target-language migration scaffold"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Ganesh Viswanath Sambhu" }]
keywords = ["java", "spring-boot", "migration", "knowledge-graph", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "click>=8.1",
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    "pathspec>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
codeograph = "codeograph.cli.main:cli"

[project.optional-dependencies]
dev = [
    "datamodel-code-generator>=0.25",
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "ruff==0.15.12",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["codeograph"]
# parser.jar (shaded fat JAR) bundled at codeograph/parser/lib/parser.jar
# Included automatically via the packages glob above.

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Schema model files use long Pydantic Field(description=...) strings that are
# intentional documentation — wrapping them harms readability.
"codeograph/graph/models/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["codeograph"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["codeograph/graph/models/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
# Use --update-goldens to refresh golden files in tests/test_golden.py
markers = [
    "integration: marks tests that require JVM subprocess or real JAR (deselect with -m 'not integration')",
    "tier1: Tier 1 golden tests — surgical fixture, run on every CI push",
    "tier2: Tier 2 golden tests — PetClinic real-world corpus, run on every CI push",
    "tier3: Tier 3 golden tests — scale corpus, nightly only (deselect with -m 'not tier3')",
]

# ---------------------------------------------------------------------------
# External version pins (non-Python deps, per ADR-006 canonical-form clause)
# Bumping any entry here is an explicit upgrade event that triggers a goldens
# refresh (pytest --update-goldens) before the commit can land.
# ---------------------------------------------------------------------------
[tool.codeograph.versions]
# JavaParser — Java AST library used by codeograph/parser/java (ADR-003).
# Source of truth: codeograph/parser/java/pom.xml <javaparser.version>.
# Bundled as: codeograph/parser/lib/parser.jar (shaded fat JAR).
javaparser = "3.26.2"
