[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeograph"
version = "0.1.0"
description = "Ingest a Java/Spring Boot codebase; emit a knowledge graph and a target-language migration scaffold"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Ganesh Viswanath Sambhu" }]
keywords = ["java", "spring-boot", "migration", "knowledge-graph", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "jsonschema>=4.0",
    "click>=8.1",
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    "pathspec>=0.12",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "langchain-anthropic>=0.1",
]

[project.scripts]
codeograph = "codeograph.cli.main:cli"

[project.optional-dependencies]
dev = [
    "datamodel-code-generator==0.61.0",
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-asyncio>=0.23",
    "ruff==0.15.12",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "types-PyYAML>=6.0",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["codeograph"]
# parser.jar (shaded fat JAR) bundled at codeograph/parser/lib/parser.jar
# Included automatically via the packages glob above.

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Schema model files use long Pydantic Field(description=...) strings that are
# intentional documentation — wrapping them harms readability.
"codeograph/graph/models/*.py" = ["E501"]
"codeograph/passes/pass1/schemas.py" = ["E501"]
"codeograph/passes/pass2/schemas.py" = ["E501"]
# Eval check files contain long ADR-cited rationale strings — same rationale.
"codeograph/evals/checks/**/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["codeograph"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
exclude = ["codeograph/graph/models/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow and not external and not eval' --cov=codeograph --cov-report=term-missing --cov-report=html --cov-fail-under=80"
asyncio_mode = "auto"
# Use --update-goldens to refresh golden files in tests/test_golden.py
markers = [
    "slow: marks slow tests (deselect with -m 'not slow')",
    "external: marks tests that depend on external tools or resources (JVM, network, etc.)",
    "eval: marks evaluation/scorecard tests (deselect with -m 'not eval')",
]

[tool.coverage.run]
omit = [
    "*/_generated/*",
    "codeograph/__main__.py"
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "if __name__ == .__main__.:",
    "def __repr__",
    "pragma: no cover"
]

# ---------------------------------------------------------------------------
# External version pins (non-Python deps, per ADR-006 canonical-form clause)
# Bumping any entry here is an explicit upgrade event that triggers a goldens
# refresh (pytest --update-goldens) before the commit can land.
# ---------------------------------------------------------------------------
[tool.codeograph.versions]
# JavaParser — Java AST library used by codeograph/parser/java (ADR-003).
# Source of truth: codeograph/parser/java/pom.xml <javaparser.version>.
# Bundled as: codeograph/parser/lib/parser.jar (shaded fat JAR).
javaparser = "3.26.2"
